2006-02-27 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Correct return address from backend form to directMail defaultView; in some cases was creating a new record based on same page!
	* Add flowedFormat option for plain text content (Page TSConfig in BE and TS setup of plain text rendering plugin).
	* Eliminate references to $HTTP_POST_VARS.

2006-02-26 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Add class.tx_directmail_ttnews_plaintext.php in res/scripts: hook on tt_news to render tt_news records in plain text.
	* Add static template tt_news_plaintext: "Direct Mail News Plain Text" to configure rendering of News in plain text.
	* Corrections and adjustments to plain text rendering plugin class.
	* Further minor cosmetic changes in class mod_web_dmail.

2006-02-24 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Move attach.gif and mail.gif from mod to res/gfx directory.
	* Move icon_tx_directmail_category.gif from extension root to res/gfx directory.
	* Import newmail.gif from t3lib/gfx into res/gfx
	* Import dmail.gif, dmail_list.gif, modules_dmail.gif, modules_dmail__h.gif into res/gfx
	* Use t3lib_iconWorks for all icons.
	* Small cosmetic changes im class mod_web_dmail.
	
2006-02-23 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Remove enablePlain and enableHTML configuration properties. Rely on sendOptions and submitted url's.
	* Correct query of pages not yet direct mails in Direct mails function.
	* Completed French translation.

2006-02-22 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>
	* Update to csh files.
	* Reverting change to jumpUrl after correction of bugtracker issue 2592 in TYPO3core.
	* Update to manual (incomplete).
	* Remove help function.
	* Add priority as module configuration property.
	* Correcting accidental removal of HTMLParams column in TCA.
	* Localization of module completed.

2006-02-21 Stanislas Rolland <stanislas.rolland(arobas)fructifor.ca>